--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,10 +1,8 @@
-<h1 class="text-center mt-4"><%= @user.username %>'s profile</h1>
+<h1 class="text-center mt-4"><%= @category.name %></h1>
 
-<%= gravatar_for @user, size: 200 %>
-
-<% if logged_in? && @user == current_user %>
+<% if logged_in? %>
   <div class="text-center mt-4">
-      <%= link_to "Edit your profile", edit_user_path(@user), class: "btn btn-outline-info" %>
+    <%= link_to "Edit category name", edit_category_path(@category), class: "btn btn-outline-info" %>
   </div>
 <% end %>
 
